tests/NormalTests/paczka2/big_fuzzy/11790304.err
Error in line 8: k0i A/4/ 92,9
Error in line 9: lqtKIMv0Ek S705 34,4
Error in line 17: LfaZAh77KK A545 0,3
Error in line 25: mgoWuu S705 79,¯
Error in line 10: k0i A545 9,3
Error in line 27: lqtKIMv0Ek A250 33,7
Error in line 26: k0i S705 54,5
Error in line 37: mgoWuu S705 115,4
Error in line 30: S705 S989 76,4
Error in line 42: LfaZAh77KK S989 140,5
Error in line 55: ÔfaZAh77KK A250 84,9
Error in line 59: npw S989 64,8
Error in line 60: npw A250 81,2
Error in line 54: k0i A545 65,9
Error in line 72: k0i S989 13,2
Error in line 68: LfaZAh77KK A250 337,8
Error in line 75: LfaZAh77KK A545 81,6
Error in line 74: k0i A545 42,4
Error in line 85: LfaZAh77KK S705 3,3
Error in line 82: BLoG8GUHa5 A250 79,1
Error in line 87: LfaZAh77KK S989 51,9
Error in line 94: BLoG8GUHa5 Sm8m 80,5
Error in line 109: S705 A545 7,6
Error in line 108: lqtKIMv0Ek A250 29,5
Error in line 124: mgoWuu S989 42,5
Error in line 100: BLoG8GUHa5 S989 121,6
Error in line 126: BLoG8GUHa5 S705 66,6
Error in line 118: LfaZAh77KK S989 5,4
Error in line 132: LfaZAh77KK A545 71,2
Error in line 140: mgoWuu S705 95,7
Error in line 129: npw A250 17,2
Error in line 154: BLoG8GUHa5 A250 44,6
Error in line 162: k0i A545 8a,9
Error in line 159: k0i S705 65,2
Error in line 176: BLoG8GUHa5 S989 65,8
Error in line 170: k0i A545 53,7
Error in line 199: LfaZAh77KK A545 100,0
Error in line 189: S705 A250 91,6
Error in line 210: BLoG8GUHa5 S989 19,3
Error in line 209: LfaZAh77KK S989 301,1
Error in line 207: S705 S705 27,0
Error in line 196: k0i A250 23,2
Error in line 221: k0i S705 59,2
Error in line 222: k0i S989 96,6
Error in line 223: S705 A250 84,5
Error in line 202: npw A545 5,5
Error in line 231: BLoG8GUHa5 A545 21,7
Error in line 240: npw A545 82,3
Error in line 247: S705 S705 239,9
